--- a/resources/portugal/index.html
+++ b/resources/portugal/index.html
@@ -11,8 +11,8 @@ title: Portugal
   
   <h2>Code Avengers</h2>
   <ul>
-    <li><a href="http://www.codeavengers.com/javascript/17?l=pt">Aprenda a criar um jogo com o Code Avengers!</a> Neste introdução de 30 minutos, voce vai usar JavaScript para construir um jogo que você pode compartir com seus amigos.</li>
-    <li><a href="http://www.codeavengers.com/javascript/9?l=pt">JavaScript Hora do Tutorial do Código</a> O tutorial ensina você a fazer o jogo de perguntas de JavaScript em 5 pequenas lissões.</li>
+    <li><a href="http://www.codeavengers.com/javascript/17?l=pt">Aprende a criar um jogo com o Code Avengers!</a> Nesta introdução de 30 minutos, vais usar JavaScript para construir um jogo para partilhar com os teus amigos.</li>
+    <li><a href="http://www.codeavengers.com/javascript/9?l=pt">JavaScript Hora do Tutorial do Código</a> O tutorial ensina-te a fazer um jogo de perguntas de JavaScript em 5 pequenas lições.</li>
   </ul>
 
   <p>Know any other resources? <a href="mailto:{{site.contact.email}}">Send us an email</a> or add links to this page with a <a href="https://github.com/codeeu/codeeu.github.io">Pull request on GitHub</a>!</p>
